<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lezzetansiklopedisi.HomeFragment"
        android:label="@string/title_home"/>

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.lezzetansiklopedisi.ListFragment"
        android:label="@string/title_list"/>

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.example.lezzetansiklopedisi.PersonFragment"
        android:label="@string/title_person"/>

    <!-- New fragments -->
    <fragment
        android:id="@+id/navigation_soups"
        android:name="com.example.lezzetansiklopedisi.SoupsFragment"
        android:label="@string/title_soups"/>

    <fragment
        android:id="@+id/navigation_main_dishes"
        android:name="com.example.lezzetansiklopedisi.MainDishesFragment"
        android:label="@string/title_main_dishes"/>

    <fragment
        android:id="@+id/navigation_pastry"
        android:name="com.example.lezzetansiklopedisi.DessertFragment"
        android:label="@string/title_desserts"/>
</navigation>
