<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:src="@drawable/logo" />

        <ImageButton
            android:id="@+id/btn_waffle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/title_desserts_waffle"
            android:onClick="onSoupButtonClick"
            android:scaleType="fitCenter"
            android:src="@drawable/waffle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_desserts_waffle"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <ImageButton
            android:id="@+id/btn_donut"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/title_desserts_donut"
            android:onClick="onSoupButtonClick"
            android:scaleType="fitCenter"
            android:src="@drawable/donut"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_desserts_donut"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <ImageButton
            android:id="@+id/btn_cookie"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button"
            android:src="@drawable/cookie"
            android:scaleType="fitCenter"
            android:contentDescription="@string/title_desserts_cookie"
            android:onClick="onSoupButtonClick"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_desserts_cookie"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <ImageButton
            android:id="@+id/btn_churros"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button"
            android:layout_marginTop="10dp"
            android:src="@drawable/churros"
            android:scaleType="fitCenter"
            android:contentDescription="@string/title_desserts_churros"
            android:onClick="onSoupButtonClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_desserts_churros"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <ImageButton
            android:id="@+id/btn_creme_caramel"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button"
            android:layout_marginTop="10dp"
            android:src="@drawable/creme_caramel"
            android:scaleType="fitCenter"
            android:contentDescription="@string/title_desserts_creme_caramel"
            android:onClick="onSoupButtonClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_desserts_creme_caramel"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <ImageButton
            android:id="@+id/btn_macaron"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button"
            android:layout_marginTop="10dp"
            android:src="@drawable/macaron"
            android:scaleType="fitCenter"
            android:contentDescription="@string/title_desserts_macaron"
            android:onClick="onSoupButtonClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_desserts_macaron"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</ScrollView>
