<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/kahve"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:queryHint="Ara..."
            android:background="@drawable/searchview_background"
            android:iconifiedByDefault="false"
            android:padding="8dp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white" />


        <ImageButton
            android:id="@+id/btn_besamelli_tavuk"
            android:layout_width="267dp"
            android:layout_height="124dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:src="@drawable/besamelli_tavuk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/title_main_dishes_besamelli_tavuk"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/btn_churros"
            android:layout_width="267dp"
            android:layout_height="131dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:src="@drawable/churros"
            tools:ignore="DuplicateIds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/title_desserts_churros"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/btn_cilekli_limonata"
            android:layout_width="267dp"
            android:layout_height="125dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:src="@drawable/cilekli_limonata"
            tools:ignore="DuplicateIds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/title_drinks_cilekli_limonata"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
